Mentor auth error messages alignment fixed

--- a/client/src/stylesheets/MentorAuth.module.css
+++ b/client/src/stylesheets/MentorAuth.module.css
@@ -132,7 +132,7 @@
 	padding-left: 1.25rem;
 	padding-right: 1.25rem;
 	text-align: center;
-	margin-top: 8.5rem;
+	margin-top: 1rem;
 	font-weight: 500;
 	border-width: 0.1rem;
 	border-style: solid;
